FIX: header issue on mobile

--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -702,6 +702,7 @@ p {
     padding: 20px;
     width: 100%;
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.03);
+  background: $white;
   }
 
   .container-width {
